Bug 267513 - Files with accented characters in names appear untracked
Summary: Files with accented characters in names appear untracked
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: plugins: git (other bugs)
Version First Reported In: 16.12.2
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Sebastian Dörner
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-03-02 23:22 UTC by David Palacio
Modified: 2011-12-29 19:22 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David Palacio 2011-03-02 23:22:29 UTC
Version:           unspecified (using Devel) 
OS:                Linux

Dolphin offers to add a file/folder with an accented character (áéíóú) in it's name when that file is already tracked and up to date. Git status reports nothing to add to commit.

$ git --version
git version 1.7.3.4


KDE SC from git/master

Reproducible: Always




OS: Linux (x86_64) release 2.6.36-gentoo-r5
Compiler: gcc
Comment 1 Sebastian Dörner 2011-12-29 19:22:36 UTC
SVN commit 1270899 by doerner:

Backport of commit 1270897.

FIXED-IN: 4.8
Related: bug 284651


 M  +65 -90    fileviewgitplugin.cpp  
 M  +9 -1      fileviewgitplugin.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1270899