Backport of commit 1270897.

BUG: 267513
FIXED-IN: 4.8
CCBUG: 284651

svn path=/branches/KDE/4.8/kdesdk/dolphin-plugins/; revision=1270899